# eruca2d

./: .gitignore
dependent/: lib_vers.txt
dependent/SDL/include/: sdl_events.h
dependent/SDL_gui/: INSTALL  Makefile.am  Makefile.in  README  SDL_gui.spec.in  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  mkinstalldirs
dependent/SDL_gui/demo/: .#Makefile.am.1.10.2.2  .#simple.cc.1.1.2.1  .cvsignore  .cvsignore~  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.cache  config.status  configure  configure.in  floppy.xcf  overlay  overlay.cc  simple  testgl  testgl.cc  uitest  uitest.c  uitest_cxx  uitest_cxx.cc
dependent/SDL_gui/demo/.deps/: overlay.P  simple.P  testgl.P  uitest.P  uitest_cxx.P
dependent/SDL_gui/include/: Makefile.am  Makefile.in  SDL_gui.h
dependent/SDL_gui/src/: AbstractButton.cc  Button.cc  Callback.cc  CardStack.cc  Container.cc  Drawable.cc  Exception.cc  FastFont.cc  Font.cc  Label.cc  Makefile.am  Makefile.in  Object.cc  Panel.cc  Picture.cc  ProgressBar.cc  RealScreen.cc  SDL_gui.cc  Screen.cc  ScrollBar.cc  Surface.cc  TextEntry.cc  ToggleButton.cc  TrueTypeFont.cc  Widget.cc
dependent/SDL_image/demos/: README  formats.c  lena.cur  lena.lbm  lena.pcx  lena.pgm  lena.xbm  lena.xcf  lena.xpm  lena.xv  viewimage-fade.c
game/data/levels/: level.txt
game/data/spirits/: girl.txt
game/data/sprites/: mult_channel_sprite.txt
src/: cfg_file.h  collide.h  collider.cpp  collider.h  common.h  crc32.cpp  crc32.h  creature.h  design_collide.txt  design_misc.txt  design_resmgr.txt  design_sound.txt  design_sprite.txt  doc.txt  engine.h  frame_rate.h  game.cpp  game.h  game_obj.h  gameobj.cpp  gameobj.h  input.h  keyboard.cpp  keyboard.h  killerg_nc.cpp  level.cpp  level.h  listener.h  main.cpp  painter.cpp  painter.h  res_mgr.cpp  res_mgr.h  shape.h  spirit.h  sprite.cpp  sprite.h  stdafx.cpp  text.cpp  text.h  (+5 more)
