
noinst_PROGRAMS = uitest uitest_cxx simple overlay testgl

uitest_SOURCES = uitest.c
uitest_LDADD = -lSDL_gui

uitest_cxx_SOURCES = uitest_cxx.cc
uitest_cxx_LDADD = -lSDL_gui

simple_SOURCES = simple.cc
simple_LDADD = -lSDL_gui

overlay_SOURCES = overlay.cc
overlay_LDADD = -lSDL_gui

testgl_SOURCES = testgl.cc
testgl_LDADD = -lSDL_gui @GL_LIBS@

EXTRA_DIST = \
	background.jpg \
	bg2.jpg \
	cursor.png \
	smiley.png \
	simplefont.png \
	bboron.ttf \
	picture1.jpg \
	picture2.jpg \
	floppy-off-highlight.png \
	floppy-off-normal.png \
	floppy-on-highlight.png \
	floppy-on-normal.png \
	lg-button-disabled.png \
	lg-button-highlight.png \
	lg-button-normal.png \
	lg-button-pressed.png \
	md-button-disabled.png \
	md-button-highlight.png \
	md-button-normal.png \
	md-button-pressed.png \
	sm-button-disabled.png \
	sm-button-highlight.png \
	sm-button-normal.png \
	sm-button-pressed.png \
	tn-button-disabled.png \
	tn-button-highlight.png \
	tn-button-normal.png \
	tn-button-pressed.png \
	tiny-button.png
